// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isActive: false and theme: auto 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  align-items: center;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  cursor: pointer;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media (prefers-color-scheme: dark) {
  button {
    color: #FBFCFF;
  }
  button:focus-visible {
    outline-color: #1A44EA;
  }
}

@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
@media (prefers-color-scheme: dark) {
    button:hover {
      background: rgba(148, 149, 152, .18);
    }
}

}
"
`;

exports[`getComponentCss() should return correct css for isActive: false and theme: dark 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  align-items: center;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  cursor: pointer;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for isActive: false and theme: light 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  align-items: center;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  cursor: pointer;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for isActive: true and theme: light 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  align-items: center;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  cursor: default;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background: rgba(148, 149, 152, .18);
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}
"
`;
